feat(benchmark): Add OutboxRelay performance Benchmarking with BenchmarkDotNet
Add performance benchmark project for OutboxMessageRelay that measures
Kafka publishing performance with different compression algorithms using real
infrastructure (SQL Server + Kafka).

Key components:
- Add benchmark infrastructure with Docker containers for SQL Server and Kafka
- Compare performance across different Kafka compression algorithms (None, Snappy, Zstd)
- Include detailed documentation on running benchmarks and interpreting results
- Add seeding utilities for pre-populating outbox messages for consistent testing
- Update test framework to support benchmark scenarios with FastEndpoints.Testing

Additional changes:
- Add BenchmarkDotNet diagnostic packages (dotMemory, dotTrace, Windows)
- Centralize FastEndpoints.Testing dependency to Test.Framework project

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,9 @@
         <PackageVersion Include="AspNetCore.HealthChecks.Prometheus.Metrics" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.HealthChecks.Uris" Version="9.0.0"/>
         <PackageVersion Include="AspNetCore.SignalR.OpenTelemetry" Version="1.7.0"/>
+        <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotMemory" Version="0.15.6"/>
+        <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotTrace" Version="0.15.6"/>
+        <PackageVersion Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.6"/>
         <PackageVersion Include="Bogus" Version="35.6.3"/>
         <PackageVersion Include="Confluent.Kafka" Version="2.6.1"/>
         <PackageVersion Include="Confluent.SchemaRegistry.Serdes.Avro" Version="2.6.1"/>
