--- a/test/DotNetAtlas.Test.Framework/DotNetAtlas.Test.Framework.csproj
+++ b/test/DotNetAtlas.Test.Framework/DotNetAtlas.Test.Framework.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <IsTestProject>false</IsTestProject>
+    </PropertyGroup>
+
     <ItemGroup>
+        <PackageReference Include="FastEndpoints.Testing"/>
+        
         <!-- Database -->
         <PackageReference Include="Testcontainers.MsSql"/>
         <PackageReference Include="Evolve"/>
