feat(feedback): Add DDD Aggregate and Domain events, introduce Feedback events
Transform feedback entity into proper DDD aggregate root with event notification
support. Remove magic numbers by exposing validation constraints as public domain constants that drive both business logic and API layer validation.

Core Domain Enhancements:
- Evolve Feedback from simple Entity to aggregate root with transactional guarantees
- Introduce AggregateRoot<TId> base class managing event lifecycle
- Define IAggregateRoot and IDomainEvent contracts for event handling
- Issue FeedbackCreatedDomainEvent and FeedbackChangedDomainEvent at state transitions

API and Validation Improvements:
- Unify UpdateFeedback/UpdateRating into single ChangeFeedback method
- Guard against empty updates by comparing current and new values
- Publish FeedbackRating.MinimumRating/MaximumRating constants (1-5 range)
- Publish FeedbackText.TextMaxLength constant (500 character limit)
- Rewrite validators to reference exposed domain constants
- Generate validation messages dynamically from actual constraint values

Infrastructure Updates:
- Migrate IAuditableEntity to DateTimeOffset for timezone-aware audit timestamps
- Restrict Feedback() constructor to private scope for EF Core exclusive use

--- a/platform/DotNetAtlas.SchemaRegistry/DotNetAtlas.SchemaRegistry.csproj
+++ b/platform/DotNetAtlas.SchemaRegistry/DotNetAtlas.SchemaRegistry.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <!-- exclusions for generated code -->
     <PropertyGroup>
         <NoWarn>CS0162</NoWarn> <!-- unreachable code -->
@@ -9,4 +8,7 @@
         <PackageReference Include="Apache.Avro"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Avro\" />
+    </ItemGroup>
 </Project>
