--- a/src/prometheus/prometheus-config.yaml
+++ b/src/prometheus/prometheus-config.yaml
@@ -22,6 +22,16 @@ scrape_configs:
           app: dotnetatlas-api
           kind: healthchecks
 
+  - job_name: 'outbox-relay-healthchecks'
+    scrape_interval: 10s
+    scrape_timeout: 9s
+    metrics_path: /api/health/prometheus
+    static_configs:
+      - targets: ['outbox-relay:8080']
+        labels:
+          app: outbox-relay
+          kind: healthchecks
+
 otlp:
   promote_resource_attributes:
     - service.instance.id
