--- a/.github/workflows/validate-documentation-links.yml
+++ b/.github/workflows/validate-documentation-links.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Create Issue on Scheduled Run Failure
         # Only create issues from scheduled runs, not from PRs or pushes
         if: failure() && github.event_name == 'schedule'
-        uses: peter-evans/create-issue-from-file@v5
+        uses: peter-evans/create-issue-from-file@fca9117c27cdc29c6c4db3b86c48e4115a786710 #v6.0.0
         with:
           title: 'Broken links detected in documentation'
           content-filepath: ./lychee/out.md
