--- a/platform/DotNetAtlas.OutboxRelay.WorkerService/appsettings.json
+++ b/platform/DotNetAtlas.OutboxRelay.WorkerService/appsettings.json
@@ -14,7 +14,7 @@
   // Infrastructure layer
   // Data
   "ConnectionStrings": {
-    "Outbox": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True"
+    "Outbox": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=pass123*!QWER;Encrypt=True;TrustServerCertificate=True"
   },
   "EfCore": {
     "DbContextPoolSize": 10,
