--- a/src/DotNetAtlas.Api/appsettings.json
+++ b/src/DotNetAtlas.Api/appsettings.json
@@ -104,7 +104,7 @@
   },
   // Data & Caching
   "ConnectionStrings": {
-    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=breK3k3$;Encrypt=True;TrustServerCertificate=True",
+    "Weather": "Data Source=127.0.0.1,12345;Initial Catalog=Weather;Persist Security Info=False;User ID=sa;Password=pass123*!QWER;Encrypt=True;TrustServerCertificate=True",
     "Redis": "localhost:12346,defaultDatabase=0,allowAdmin=true,connectTimeout=2000,syncTimeout=2000,abortConnect=false"
   },
   "EfCore": {
