--- a/.github/workflows/determine-git-version.yml
+++ b/.github/workflows/determine-git-version.yml
@@ -29,10 +29,10 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-      - name: Setup .NET SDK (10.0.100-rc.1.25451.107)
+      - name: Setup .NET SDK (10.0.100)
         uses: actions/setup-dotnet@d4c94342e560b34958eacfc5d055d21461ed1c5d # v5
         with:
-          dotnet-version: "10.0.100-rc.1.25451.107"
+          dotnet-version: "10.0.100"
           cache: true
           cache-dependency-path: "**/packages.lock.json"
       - run: dotnet restore --locked-mode
