--- a/.github/workflows/test-with-coverage.yml
+++ b/.github/workflows/test-with-coverage.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
-      - name: Setup .NET SDK (10.0.100-rc.1.25451.107)
+      - name: Setup .NET SDK (10.0.100)
         uses: actions/setup-dotnet@d4c94342e560b34958eacfc5d055d21461ed1c5d # v5
         with:
-          dotnet-version: "10.0.100-rc.1.25451.107"
+          dotnet-version: "10.0.100"
           cache: true
           cache-dependency-path: "**/packages.lock.json"
       - name: Restore
