feat(outbox): extend Kafka Key, enable unicode Headers

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,16 @@ services:
     command: |
       bash -c '
         /opt/mssql/bin/sqlservr &
+        echo "Waiting for SQL Server to be ready..."
+        for i in {1..60}; do
+          if /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${MSSQL_SA_PASSWORD} -C -Q "SELECT 1" &> /dev/null; then
+            echo "SQL Server is ready!"
+            break
+          fi
+          echo \"Attempt $$i/60: Waiting for SQL Server...\"
+          sleep 1
+        done
+
         echo "Creating Weather database..."
         /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${MSSQL_SA_PASSWORD} -C -Q \
         "IF NOT EXISTS (SELECT name FROM sys.databases WHERE name = \"Weather\") \
@@ -38,7 +48,6 @@ services:
           sleep 1
         done
 
-        # Run all migration scripts in order
         echo "Running database migrations..." &&
         for file in /migrations/V*.sql; do
           echo "Running: $$file" &&
@@ -47,7 +56,6 @@ services:
             exit 1
           }
         done &&
-
         echo "All migrations completed successfully" &&
         wait
       '
