--- a/.github/workflows/validate-documentation-links.yml
+++ b/.github/workflows/validate-documentation-links.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Check broken links
         uses: lycheeverse/lychee-action@885c65f3dc543b57c898c8099f4e08c8afd178a2 # v2.6.1
         with:
-          args: --cache --max-cache-age 1d --verbose --no-progress './**/*.md' './**/*.MD' './**/*.html' './**/*.rst'
+          args: --cache --max-cache-age 1d --verbose --no-progress --exclude-loopback './**/*.md' './**/*.MD' './**/*.html' './**/*.rst'
           fail: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
